--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,10 @@
   padding: 3%;
 }
 
+#userLine {
+  padding-bottom: 3%;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
